# tripolar-chat

./: .claude.json  .env.example  .gitignore  .gitingnore  .viminfo  .wget-hsts  CLAUDE.md  README.md  pyproject.toml
.claude/: .credentials.json  history.jsonl  mcp-needs-auth-cache.json  settings.local.json
.claude/backups/: .claude.json.backup.1772469351116  .claude.json.backup.1772469411860  .claude.json.backup.1772470311455  .claude.json.backup.1772470752330  .claude.json.backup.1772477376306  .claude.json.backup.1772478716089  .claude.json.backup.1772478789942  .claude.json.backup.1772479466567  .claude.json.backup.1772480108853  .claude.json.backup.1772480942000  .claude.json.backup.1772481189606  .claude.json.backup.1772481573404  .claude.json.backup.1772481646678  .claude.json.backup.1772483522279  .claude.json.backup.1772483697887  .claude.json.backup.1772487697599  .claude.json.backup.1772491392079
.claude/debug/: 2ba5a18d-f376-4e48-85c7-38a394480f64.txt  e23fc04e-0c09-4d84-9b9d-289a0916565a.txt  f968c421-cead-4cd6-8063-b6fce2cffd9e.txt  latest
.claude/paste-cache/: 06db267a236bea31.txt  1b24c4ca53270cf8.txt  39fd251c07155311.txt  640d8c7fa0ad4982.txt  73d74d80bc17ee44.txt  87856a2847ee4b20.txt  9c5f8aa222490ee1.txt  bce5638f43bb14cb.txt  d8b06a42a2ed1808.txt  (+1 more)
client/: api.py  config.py  main.py  tui.py
server/: config.py  main.py  models_assets.py
tests/: conftest.py  test_api_client.py  test_assets.py  test_cli_connectors.py  test_connector_query.py  test_connectors.py  test_startup.py  test_tools.py  test_tui_workers.py  test_vllm_manager.py
(+81 files in other folders)
