[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factorymind"
version = "0.1.0"
description = "Enterprise LLM inference platform for industrial environments"
requires-python = ">=3.12"
dependencies = [
    # Server
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.19",
    "pydantic-settings>=2.2",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.0", # passlib 1.7.x is not compatible with bcrypt>=4
    "python-jose[cryptography]>=3.3",
    # Client
    "typer[all]>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "textual>=0.50",
    "vllm>=0.16.0",
    "hf-transfer>=0.1.9",
]

[project.scripts]
fmind = "client.main:main"

[tool.hatch.build.targets.wheel]
packages = ["server", "client"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
